# zmesh

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  README.md  automated_test.py  buildmac.zsh  cMesher.hpp  dev_requirements.txt  perf.py  sample.py  setup.cfg  setup.py  test.py  tox.ini  zmesh.cpp  zmesh.pyx
.github/workflows/: build_wheels.yml  test.yml
connectomics_npy_meshes/: README.md
connectomics_npy_meshes/simplified/: 13614423.ply  16649205.ply  16688985.ply  22270104.ply  23346177.ply  23866523.ply  23911238.ply  23942490.ply  24183237.ply  24301197.ply  24509545.ply  24687766.ply  24780065.ply  25024949.ply  25306372.ply  25312466.ply  25596298.ply  25630653.ply  25637294.ply  25776532.ply  25899315.ply  26155154.ply  26255329.ply  26386514.ply  26664149.ply  27263401.ply  27283739.ply  27311886.ply  27347370.ply  27349359.ply  27367757.ply  27396554.ply  27411232.ply  27416686.ply  27456357.ply  27509455.ply  27546308.ply  27627809.ply  27640205.ply  27646231.ply  (+2482 more)
templates/: mesherclass.j2  rendertemplate.py
zi_lib/zi/ai/: decision_tree.hpp
zi_lib/zi/bits/: array.hpp  bind.hpp  cstdint.hpp  enable_shared_from_this.hpp  function.hpp  hash.hpp  mem_fn.hpp  random.hpp  ref.hpp  result_of.hpp  shared_ptr.hpp  tuple.hpp  type_traits.hpp  typeof.hpp  unordered_map.hpp  unordered_set.hpp
zi_lib/zi/cache/detail/: multi_index.hpp
zi_lib/zi/heap/: binary_heap.hpp
zi_lib/zi/heap/detail/: binary_heap_impl.hpp
zi_lib/zi/mesh/: face_mesh.hpp  int_mesh.hpp  marching_cubes.hpp  network_sort.hpp  quadratic_simplifier.hpp  tri_mesh.hpp
zi_lib/zi/mesh/detail/: all_equal.hpp  mc_tables.hpp  packed_coordinate.hpp  tri_mesh_edge.hpp  tri_mesh_face.hpp
zi_lib/zi/zargs/detail/: lexical_cast.hpp
zmesh/: __init__.py  _zmesh.cpp  _zmesh.pyx  cMesher.hpp  ccl.hpp  mesh.py  unordered_dense.hpp  utility.hpp
