[metadata]
name = zmesh
url = https://github.com/seung-lab/zmesh/
summary = Multilabel marching cubes and simplification of volumetric data.
description-content-type = text/markdown; charset=UTF-8; variant=GFM
description-file = README.md
author = William Silversmith (maintainer), Aleks Zlateski (original author)
author-email = ws9@princeton.edu
home-page = https://github.com/seung-lab/zmesh/
license = GPLv3+
classifier =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Multimedia :: Graphics :: 3D Modeling

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = zmesh