[metadata]
name = zmesh
url = https://github.com/seung-lab/zmesh/
summary = Multilabel marching cubes and simplification of volumetric data.
description_content_type = text/markdown; charset=UTF-8; variant=GFM
description_file = README.md
author = William Silversmith (maintainer), Aleks Zlateski (original author)
author_email = ws9@princeton.edu
home_page = https://github.com/seung-lab/zmesh/
license = LGPL-3.0-or-later
classifier =
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Utilities
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Multimedia :: Graphics :: 3D Modeling

[global]
setup_hooks =
    pbr.hooks.setup_hook

[files]
packages = zmesh